--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -31,3 +31,4 @@ message.logoutError=Sorry, error login out
 message.logoutSucc=You logged out successfully
 message.noUser=no user found with username
 label.form.loginSignUp=verification token is bad
+message.userBanned=your account was banned by admin
